# v4rl_mesh_based_mapping_lib

./: .gitignore  CMakeLists.txt  README.md
examples/okvis_dataset_example/: CMakeLists.txt
examples/okvis_dataset_example/src/: okvis_data_reader.cpp  okvis_data_reader.hpp  okvis_dataset_example_main.cpp
examples/simple_example/: CMakeLists.txt
examples/simple_example/src/: main.cpp  obj.data
include/: mesh_based_mapping.hpp
include/mesh_based_mapping/: mesh_based_mapping.hpp
include/mesh_based_mapping/utils/: file_io.hpp  mesh_based_mapping_okvis_wrapper.hpp  triangle_rasterization.hpp
src/: mesh_based_mapping.cpp
